--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -285,5 +285,10 @@
             "error",
             "never"
         ]
+    },
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
     }
 }
