--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-beautiful-dnd": "^11.0.5",
     "react-dom": "^16.8.6",
     "react-draggable": "^3.3.0",
+    "react-dropdown": "^1.6.4",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "serve": "^11.1.0"
