Made columns created based on terms selected

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -257,7 +257,7 @@
             "last"
         ],
         "sort-keys": "off",
-        "sort-vars": "error",
+        "sort-vars": "off",
         "space-before-blocks": "error",
         "space-before-function-paren": "off",
         "space-in-parens": [
