Removed dependency on call to terms route

--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react-draggable": "^3.3.0",
     "react-dropdown": "^1.6.4",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
-    "serve": "^11.1.0"
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
