--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -128,7 +128,7 @@
         "max-params": "error",
         "max-statements": "off",
         "max-statements-per-line": "off",
-        "multiline-comment-style": "error",
+        "multiline-comment-style": "off",
         "new-cap": "error",
         "new-parens": "error",
         "newline-after-var": "off",
