Fixed image linting errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -83,7 +83,7 @@
         "func-style": "error",
         "function-paren-newline": "error",
         "generator-star-spacing": "error",
-        "global-require": "error",
+        "global-require": "off",
         "guard-for-in": "error",
         "handle-callback-err": "error",
         "id-blacklist": "error",
