Fixed linting error

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -120,7 +120,7 @@
             "always"
         ],
         "max-classes-per-file": "error",
-        "max-depth": "error",
+        "max-depth": "off",
         "max-len": "off",
         "max-lines": "off",
         "max-lines-per-function": "error",
