--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "react-draggable": "^3.3.0",
     "react-dropdown": "^1.6.4",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "serve": "^11.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "eslint '**'",
-    "testReact": "react-scripts test"
+    "testReact": "react-scripts test",
+    "heroku-postbuild": "npm run build"
   },
   "homepage": "https://cooperbarth.com/Apollo-client/",
   "eslintConfig": {
