--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "cross-env": "^5.2.0",
     "eslint-plugin-react": "^7.14.3",
+    "material-icons-react": "^1.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-beautiful-dnd": "^11.0.5",
